<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">DemoApp</string>
    <string name="action_settings">Settings</string>
    <string name="net_error_retry">网络不给力，重新加载</string>
    <string name="loading">加载中</string>

    <string name="state_empty">STATE_EMPTY STATE_EMPTY STATE_EMPTY</string>
    <string name="state_error">STATE_ERROR STATE_ERROR STATE_ERROR</string>
    <string name="state_loading"> STATE_LOADING STATE_LOADING STATE_LOADING</string>
    <string name="state_normal">STATE_NORMAL STATE_NORMAL STATE_NORMAL</string>

    <string name="title">Title</string>
    <string name="sub_title">SubTitle</string>

    <string name="enter_new_note">Enter new note</string>
    <string name="enter_new_user">Enter new user</string>
    <string name="enter_new_good">Enter new good</string>
    <string name="add">Add</string>
    <string name="click_to_remove">Click to remove it</string>
    <string name="money_format">&#165;%1$.2f/%2$s</string>


    <string name="dynamic_text_add">代码添加</string>
    <string name="dynamic_text_body_click">主体点击</string>
    <string name="dynamic_text_global_item">全局替换的文案</string>
    <string name="dynamic_text_local_item">局部替换的文案</string>


    <string name="dynamic_text_body">主体</string>

    <string name="dynamic_text_inflate_sys">inflate系统TextView</string>
    <string name="dynamic_text_inflate_define">inflate自定义TextView</string>
    <string name="dynamic_text_new_sys">new系统TextView</string>
    <string name="dynamic_text_new_define">new自定义TextView</string>

    <string name="dynamic_text_tab_1_inflate_sys">解析</string>
    <string name="dynamic_text_tab_2_inflate_define">解析自</string>
    <string name="dynamic_text_tab_3_new_sys">代码</string>
    <string name="dynamic_text_tab_4_new_define">代码自</string>

    <string name="no_reference_str">没有引用的文案</string>

</resources>
