<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_body"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/dynamicColor"
            android:gravity="center"
            android:text="@string/dynamic_text_body"
            android:layout_marginBottom="2dp"/>
        <TextView
            android:id="@+id/tv_inflate_sys"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/dynamicColor"
            android:gravity="center"
            android:text="@string/dynamic_text_inflate_sys"
            android:layout_marginBottom="2dp"/>
        <com.omottec.demoapp.view.log.LogTextView
            android:id="@+id/tv_inflate_define"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/dynamicColor"
            android:gravity="center"
            android:text="@string/dynamic_text_inflate_define"
            android:layout_marginBottom="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/darker_gray">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/appcenter_navigation_tab_icon"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/appcenter_navigation_tab_icon"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/yellow_face_1"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/yellow_face_1"/>


        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/appcenter_tab_normal_desktop"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/dog_1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_nav"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <LinearLayout
            android:id="@+id/ll_tab_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/tabColor">
            <ImageView
                android:id="@+id/iv_tab_1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/yellow_face_1"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/tv_tab_1"
                android:tag="tag_tv_dynamic_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/dynamic_text_tab_1_inflate_sys"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_tab_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/tabColor">
            <com.omottec.demoapp.view.log.LogImageView
                android:id="@+id/iv_tab_2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/yellow_face_2"
                android:layout_gravity="center_horizontal"/>
            <com.omottec.demoapp.view.log.LogTextView
                android:id="@+id/tv_tab_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/dynamic_text_tab_2_inflate_define"/>
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="vertical"-->
<!--            android:background="@color/tabColor">-->
<!--            <ImageView-->
<!--                android:id="@+id/iv_tab_3"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginTop="3dp"-->
<!--                android:src="@drawable/yellow_face_3"-->
<!--                android:layout_gravity="center_horizontal"/>-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:text="@string/dynamic_text_tab_3"/>-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="vertical">-->
<!--            <ImageView-->
<!--                android:id="@+id/iv_tab_4"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginTop="3dp"-->
<!--                android:src="@drawable/yellow_face_4"-->
<!--                android:layout_gravity="center_horizontal"/>-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:text="@string/dynamic_text_tab_4"/>-->
<!--        </LinearLayout>-->
    </LinearLayout>
</LinearLayout>